# uni_headless

./: .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix
.github/workflows/: debian-release.yml  errors.yml  other.yml  release-linux-x86_64.yml  release-windows-x86_64.yml  release.yml  warnings.yml  windows-release.yml
.readme_assets/: description.md  installation-windows.md
docs/.readme_assets/: installation-windows.md  usage.md
examples/: config.nix
src/: config.rs  lib.rs  llm.rs  login.rs  main.rs  runner.rs
