cargo-features = ["codegen-backend"]
[package]
name = "uni_headless"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
ask_llm = { version = "^0.2.0", default-features = false }
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "^0.6.3"
derive-new = "^0"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
v_utils = { version = "2.9.10", features = ["xdg", "cli"] }

[lints.clippy]
# Stable
float_cmp = "allow" # is bad for `==` direct comparisons, but `<` and `>` should be allowed
len_zero = "allow" # `.empty()` is O(1) but on &str only
undocumented_unsafe_blocks = "warn"
tabs_in_doc_comments = "allow"

# Questionable
# const fns, so actually more performant
get_first = "allow"
get_last_with_len = "allow"
